--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,8 +1,7 @@
 img {
-    margin-top: 20px; 
     display: block;   
-    width: 500px;
-    height: 200px;
+    width: 900px;
+    height: 300px;
 }
 
 
@@ -12,15 +11,21 @@ img {
     gap: 10px; 
     justify-content: center;
 }
+.container-texto{
+    margin-top: 30px;
+    border-bottom: 1px solid #888;
+}
 
 .navbar1{
     justify-content: center;
-    margin-left: 200px;
     justify-items: center;
     justify-self: center;
+    margin-bottom: 20px;
+}
+
+.titulo{
+    font-size: 27px; 
+    text-shadow: 10px 5px 18px
 }
 
 
-h1{
-    width: 700px;
-}
